卜算子域名过期显示不了数据问题

--- a/index.html
+++ b/index.html
@@ -2017,7 +2017,7 @@ TakePhoto 组件的全部代码如下:
 
         
 <div class="busuanzi-count">
-  <script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+  <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
   
     <span class="site-uv">
